--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,3 +53,13 @@ dependencies = [
     "ipykernel",
     "notebook"
 ]
+
+[[tool.uv.index]]
+name = "pytorch-cu130"
+url = "https://download.pytorch.org/whl/cu130"
+explicit = true
+
+[tool.uv.sources]
+torch = { index = "pytorch-cu130" }
+torchvision = { index = "pytorch-cu130" }
+torchaudio = { index = "pytorch-cu130" }
